fixed overlap of gbBlock with rearrange items
git-svn-id: file:///home/jmullan/src/gallery-git/repo/trunk/gallery2@13663 57fcd75e-5312-0410-8df3-f5eb6fbb1595

--- a/themes/floatrix/theme.css
+++ b/themes/floatrix/theme.css
@@ -22,6 +22,7 @@
 }
 
 .gbBlock {
+    clear: both;
     padding: 0.7em 0.7em 0.7em 3.0em;
     border-width: 0 0 1px 0;
     border-style: inherit;
